--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AudiovisualManager">
         <activity
-            android:name=".view.MainActivity"
+            android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".view.MainListActivity"
+            android:name=".activity.MainListActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".activity.RegisterActivity"
             android:exported="true">
         </activity>
     </application>
