--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:name=".activity.RegisterActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".activity.AddGameActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
