--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:name=".activity.AddGameActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".activity.EditUserActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
