--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:name=".activity.EditUserActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".activity.UserListActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
