--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AudiovisualManager">
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,23 +22,23 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.MainListActivity"
+            android:name=".view.MainListActivity"
             android:exported="true">
         </activity>
         <activity
-            android:name=".activity.RegisterActivity"
+            android:name=".view.RegisterActivity"
             android:exported="true">
         </activity>
         <activity
-            android:name=".activity.AddGameActivity"
+            android:name=".view.AddGameActivity"
             android:exported="true">
         </activity>
         <activity
-            android:name=".activity.EditUserActivity"
+            android:name=".view.EditUserActivity"
             android:exported="true">
         </activity>
         <activity
-            android:name=".activity.UserListActivity"
+            android:name=".view.UserListActivity"
             android:exported="true">
         </activity>
     </application>
